# ML-Frameworks

./: .gitignore  pyproject.toml
Cheat Sheets/: api_design.py  dvc_snabbguide.md
L1/: L1_assignment.py
L10/: L10_assignment_CLASSROOM.ipynb
L10/Material/: lightning_vs_vanilla_pytorch.ipynb  lightningmodule_struktur.md
L11/: L11_assignment_CLASSROOM.ipynb
L11/Material/: dataloader_optimizing_num_workers_pin_memory.md  transfer_learning_image_data.ipynb
L12/: L12_assignment_CLASSROOM.ipynb
L12/Material/: export_to_onnx_template.py  export_to_torchscript_template.py  netron_guide.md
L13/: L13_assignment_CLASSROOM.ipynb
L13/Material/: Dockerfile  git_feature_branching_guide.md
L14/: L14_assignment_CLASSROOM.ipynb
L14/Material/: ethics_tools_resources.md  jax_speed_test.ipynb
L4/: L4_assignment_CLASSROOM.ipynb
L5/: L5_assignment_CLASSROOM.ipynb
L6/: L6_assignment_CLASSROOM.ipynb
L6/Material/: PyTorch_vs_Keras_Syntax.md  Tensors_101.ipynb
L7/: L7_assignment_CLASSROOM.ipynb  dvc_snabbguide.md  training_loop.py
L7/Material/: chain_rule_walkthrough.ipynb  optimization_paths_visualization.py
L8/: L8_assignment_CLASSROOM.ipynb
L8/Material/: MLOps_livscykel.md  pipeline_komponenter_diagram.md
L9/: L9_assignment_CLASSROOM.ipynb
L9/Material/: production_pipeline_template.py
src/ml_frameworks/: __init__.py
