[project]
name = "ml-frameworks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AndreasFurth", email = "andreas@nevermindmedia.se" }
]
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.31.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "torch<2.3.0",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
